--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-jwt": "^6.0.0",
-    "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.6",
-    "morgan": "~1.9.1",
+    "log4js": "^6.3.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "pug": "2.0.0-beta11",
