--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development babel-node ./index.js",
-    "start-test": "NODE_ENV=test babel-node ./index.js",
-    "start-prod": "NODE_ENV=production babel-node ./index.js",
+    "start-dev": "NODE_ENV=development babel-node ./index.js",
+    "start-local": "NODE_ENV=local babel-node ./index.js",
+    "start-testnet": "NODE_ENV=testnet babel-node ./index.js",
+    "start-prod": "NODE_ENV=production pm2 start ./index.js --interpreter node_modules/@babel/node/bin/babel-node.js",
     "setup-database": "babel-node ./scripts create-database"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
-    "babel-plugin-module-resolver": "^4.0.0"
+    "babel-plugin-module-resolver": "^4.0.0",
+    "eslint": "^7.10.0"
   }
 }
