update user profile api

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start-dev": "NODE_ENV=development pm2 start ./index.js --name filbox-dev --interpreter node_modules/@babel/node/bin/babel-node.js",
+    "start-dev": "NODE_ENV=development babel-node ./index.js",
     "start-local": "NODE_ENV=local pm2 start ./index.js --name filbox-local --interpreter node_modules/@babel/node/bin/babel-node.js",
     "start-testnet": "NODE_ENV=testnet pm2 start ./index.js --name filbox-testnet --interpreter node_modules/@babel/node/bin/babel-node.js",
     "start-prod": "NODE_ENV=production pm2 start ./index.js --name filbox-prod --interpreter node_modules/@babel/node/bin/babel-node.js",
